--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=New+Amsterdam&display=swap">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrightBlogSite</title>
+    <title>Lucky's cute teeth</title>
 </head>
 <body>
     <header id="main-header">
         <!-- header goes here --> 
-         <h1 id="logo">BrightBlog</h1>
+         <h1 id="logo">Very demure</h1>
          <nav>
             <ul id="nav-ul">
                 <li>
@@ -200,7 +200,7 @@
     <hr>
     <footer>
         <!-- footer goes here -->
-         <h2>BrightBlogSite</h2>
+         <h2>Lucky's cute teeth</h2>
          <section>
             <nav>
                 <ul id="footer-ul">
