--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <p>Lucky likes to look outside for birds. He tries to catch them but it always ends in vain.</p>
                         <p>Poor baby :(</p>
                         <blockquote>
-                            "cutest cutie" - <cite>Anna, 2024</cite>
+                            "I couldn't actually put my cat's pictures here because they are too large. I will settle for these cute dogs instead" - <cite>Anna, 2024</cite>
                         </blockquote>
                         <blockquote>
                             <cite>"he's just a baby" - Anna 2023</cite>
